# AkiPixelUtils

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  YourProgName  akiConvoTrees.h  akiJsonConvos.hpp  akiPixelUtils.hpp  exampleconvo.json  olcExampleProgram.cpp
include/: akiConvoTrees.hpp  akiJsonConvos.hpp  akiPixelUtils.hpp  olcPixelGameEngine.h
mingw-build/: CMakeCache.txt
soloud/: src.cmake
soloud/src/backend/sdl2_static/: soloud_sdl2_static.cpp
soloud_dir/: CMakeLists.txt  Configure.cmake  src.cmake
src/: Example.cpp  fonttest.cpp
